# SendMoneyAgent

./: README.md
FelixAgent/: .adkignore  .dockerignore  .gitignore  README.md  __init__.py  agent.py  pyproject.toml  requirements.txt  send_money_agent.py  send_money_state.py  setup.py  test_agent.py  utils.py
